[package]
name = "uds"
version = "0.3.0"
description = """
A unix domain socket crate that supports abstract addresses, fd-passing and seqpacket sockets.
"""
readme = "README.md"
repository = "https://github.com/tormol/uds"
license = "Apache-2.0 OR MIT"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
keywords = ["unix", "socket", "seqpacket", "abstract", "fdpassing"]
categories = ["os::unix-apis", "asynchronous"]
edition = "2021"
exclude = ["tests", "src/bin"]

[target."cfg(unix)".dependencies]
libc = "0.2.90" # peer credentials for DragonFly BSD and NetBSD, SO_PEERSEC on all Linux architectures
# enabling this feature implements the extension traits for mio-uds types
mio-uds = {version="0.6", optional=true} # no patch release builds with -Z minimal-versions
# enabling this feature implements Evented for this crate's non-blocking seqpacket types
mio = {version="0.6.14", optional=true} # .14 avoids dragging in libc 0.1 under -Z minimal-versions
# enabling this feature implements the extension traits for mio 0.7's unix socket types
# and Source for this crate's non-blocking seqpacket types.
mio_07 = { package = "mio", version = "0.7.6", features = ["os-ext", "net"], optional = true }
# enabling this feature implements the extension traits for mio 0.8's unix socket types
# and Source for this crate's non-blocking seqpacket types.
mio_08 = { package = "mio", version = "0.8", features = ["os-ext", "net"], optional = true }

[package.metadata.docs.rs]
features = ["mio-uds", "mio", "mio_07"]
